--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,6 +1,6 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://annaliseperez.com
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Annalise Perez"
 theme: hugo-profile
 
 outputs:
@@ -23,7 +23,7 @@ markup:
 Menus:
   main:
     - identifier: blog
-      name: Blog
+      name: Recipes
       title: Blog posts
       url: /blogs
       weight: 1
@@ -114,10 +114,10 @@ params:
   hero:
     enable: true
     intro: "Hi, my name is"
-    title: "Isabella."
-    subtitle: "I build things for the web"
-    content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
-    image: /images/hero.svg
+    title: "Annalise."
+    subtitle: "I love baking and my two cats"
+    content: "This website will showcase my baking skills and cats"
+    image: /images/a17.jpeg
     button:
       enable: true
       name: "Resume"
@@ -138,25 +138,22 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "/images/a7.jpeg"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
+      I am a passionate RBT working towards my Masters in Behavioral Analysis.
 
-      I am currently working on a project that will be used to help people find the best way to get around the city.
     skills:
       enable: true
-      title: "Here are a few technologies I've been working with recently:"
+      title: "Here are a few skills and certifications I currently hold:
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Fluent in English and Spanish"
+        - "Registered Behavioral Technician"
+        - "Safety Care by QBS Certified"
+        - "CPR Certified"
 
   # Experience
   experience:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - job: "Senior Software Developer"
@@ -225,46 +222,31 @@ params:
     # title: "Custom Name"
     index: false
     items:
-      - title: "Master of Business Administration"
+      - title: "Masters of Arts in Behavioral Analysis Practice"
         school:
-          name: "University of California, Berkeley"
-          url: "https://example.org"
-        date: "2013 - 2015"
-        GPA: "3.8 out of 5.0"
+          name: "Florida Institute of Technology"
+          url: "https://www.fit.edu"
+        date: "January 2021 - Present"
+        GPA: "3.95"
         content: |-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Massachusetts Institute of Technology"
-          url: "https://example.org"
-        date: "2009 - 2013"
-        GPA: "3.9 out of 5.0"
-        content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
+          Expected graduation date is May 2023
         featuredLink:
-          enable: true
+          enable: false
           name: "My academic record"
           url: "https://example.com"
-      - title: "High School"
+      - title: "Bachelors of Arts in Psychology"
         school:
-          name: "Thomas Jefferson High School for Science and Technology."
-          url: "https://example.org"
-        GPA: "4.2 out of 5.0"
+          name: "University of Nevada, Las Vegas"
+          url: "https://www.unlv.edu"
+        date: "August 2016 - December 2018"
+        GPA: "3.6"
         featuredLink:
-          enable: true
+          enable: false
           url: "https://example.com"
 
   # Achievements
   achievements:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Google kickstart runner
@@ -283,7 +265,7 @@ params:
 
   # projects
   projects:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Hugo Profile
@@ -333,10 +315,10 @@ params:
 
   #Contact
   contact:
-    enable: true
+    enable: false
     # title: "Custom Name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
+    email: example@gmail.com
     btnName: Mail me
 
   footer:
@@ -344,13 +326,12 @@ params:
       path: "blogs"
       count: 3
       title: Recent Posts
-      enable: true
+      enable: false
       disableFeaturedImage: false
     socialNetworks:
-      github: https://github.com
       linkedin: https://linkedin.com
       twitter: https://twitter.com
-      instagram: https://instagram.com
+      instagram: https://www.instagram.com/cocina_con_annalise/
       facebook: https://facebook.com
 
   # List pages like blogs and posts
