--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://annaliseperez.com
+baseURL: "https://annaliseperez.com"
 languageCode: "en-us"
 title: "Annalise Perez"
 theme: hugo-profile
