--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -100,7 +100,7 @@ params:
   navbar:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
-    brandName: "Annalise Perez" # Brand name for the brand | default is the title variable
+    brandName: "AP" # Brand name for the brand | default is the title variable
     disableSearch: false
     menus:
       disableAbout: false
