--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -135,7 +135,7 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/a7.jpeg"
+    image: "/images/anna.jpeg"
     content: |-
       I am a passionate RBT working towards my Masters in Behavioral Analysis.
 
